--- a/StudentManagerPro/StudentManagerPro/StudentManagerPro/StudentManagerPro.csproj
+++ b/StudentManagerPro/StudentManagerPro/StudentManagerPro/StudentManagerPro.csproj
@@ -73,7 +73,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreList.cs" />
+    <Compile Include="ScoreListService.cs" />
     <Compile Include="SQLHelper.cs" />
+    <Compile Include="StudentClass.cs" />
+    <Compile Include="StudentClassService.cs" />
+    <Compile Include="Students.cs" />
+    <Compile Include="StudentsService.cs" />
+    <Compile Include="SysAdmin.cs" />
+    <Compile Include="SysAdminService.cs" />
     <EmbeddedResource Include="FormMain.resx">
       <DependentUpon>FormMain.cs</DependentUpon>
     </EmbeddedResource>
